Add an attempt to study the recursive structure `splitters`.

--- a/tutorials/recursive-structures.ipynb
+++ b/tutorials/recursive-structures.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
-    "<br>May 29, 2016: Linearization\n",
-    "<br>May 28, 2016: Binary Forests, Sigmoids\n",
+    "<br>May 28, 2016: Sigmoids, Linearization\n",
     "<br>May 27, 2016: Binary and Ternary Trees, Dick paths\n",
     "<br>May 26, 2016: structure generation\n",
     "</div>\n",
@@ -35,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 530,
    "metadata": {
     "collapsed": false
    },
@@ -137,7 +136,7 @@
     "    return gen([initial_structure])\n",
     "\n",
     "#________________________________________________________________________________________\n",
-    "def make_pretty(dim, joiner=' '):\n",
+    "def make_pretty(dim, joiner=' ', separator=','):\n",
     "    \n",
     "    def pretty(structures,):\n",
     "        from collections import defaultdict\n",
@@ -150,10 +149,10 @@
     "            table = defaultdict(lambda: joiner)\n",
     "            \n",
     "            for k, v in anchors_table.items():\n",
-    "                table[k] = table[k] + '|' + v if k in table else v\n",
+    "                table[k] = table[k] + separator + v if k in table else v\n",
     "\n",
     "            for k, v in stars_table.items():\n",
-    "                table[k] = table[k] + '|' + v if k in table else v\n",
+    "                table[k] = table[k] + separator + v if k in table else v\n",
     "\n",
     "            s = ''\n",
     "            for r in range(rows):\n",
@@ -2206,6 +2205,374 @@
       "                                                 \n",
       "                                                 \n",
       "●   ●   ●   ● ★ ★                                \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 543,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# in the following, the symbol ★ has a generation power, \n",
+    "# namely produces a new structure with the basic shape replacing it.\n",
+    "\n",
+    "\"\"\"\n",
+    "★\n",
+    "o\n",
+    "─  :horizontal\n",
+    "o\n",
+    "★\n",
+    "\n",
+    "★ o │ o ★   :vertical\n",
+    " \n",
+    "\"\"\"\n",
+    "shapes = {\n",
+    "    'horizontal': lambda r, c: Anchor(symbol='─', stars=[\n",
+    "                Star(row=r-2, col=c, offsets=None, link='vertical', symbol='★'),\n",
+    "                Star(row=r+2, col=c, offsets=None, link='vertical', symbol='★'),]),\n",
+    "    'vertical': lambda r, c: Anchor(symbol='│', stars=[\n",
+    "                Star(row=r, col=c-2, offsets=None, link='horizontal', symbol='★'),\n",
+    "                Star(row=r, col=c+2, offsets=None, link='horizontal', symbol='★'),]),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 544,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rows, cols = 8, 25\n",
+    "coor, number = coordinates(rows), numbering(rows)\n",
+    "\n",
+    "# starts at the first cell of the 13th column\n",
+    "fractals = recursive_structures((shapes, 'vertical'), rows*12+4, (coor, number))\n",
+    "representations = map(make_pretty((rows, cols),), fractals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First generation contains only the *seed* symbol ★"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 545,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        ★                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 546,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    ★   │   ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 547,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "                                                 \n",
+      "                    ★                            \n",
+      "                                                 \n",
+      "                    ─   │   ★                    \n",
+      "                                                 \n",
+      "                    ★                            \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                        │   ─                    \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 548,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "                                                 \n",
+      "                ★   │   ★                        \n",
+      "                                                 \n",
+      "                    ─   │   ★                    \n",
+      "                                                 \n",
+      "                    ★                            \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    ─   │   ★                    \n",
+      "                                                 \n",
+      "                ★   │   ★                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                    ─   │   ─                    \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        ★   │   ★                \n",
+      "                                                 \n",
+      "                        │   ─                    \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        │   ─                    \n",
+      "                                                 \n",
+      "                        ★   │   ★                \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 549,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                ★                                \n",
+      "                                                 \n",
+      "                ─   │   ★                        \n",
+      "                                                 \n",
+      "                ★   ─   │   ★                    \n",
+      "                                                 \n",
+      "                    ★                            \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    │   ★                        \n",
+      "                                                 \n",
+      "                    ─,★   │   ★                    \n",
+      "                                                 \n",
+      "                    ─                            \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    │,★   │   ★                    \n",
+      "                                                 \n",
+      "                    ─   │   ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    │       ★                    \n",
+      "                                                 \n",
+      "                    ─   │   ─                    \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                ★   ─   │   ★                    \n",
+      "                                                 \n",
+      "                ─   │   ★                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    ─   │,★   ★                    \n",
+      "                                                 \n",
+      "                    │   ─                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                    ─   │   ─                    \n",
+      "                                                 \n",
+      "                    │       ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        ★   │   ★                \n",
+      "                                                 \n",
+      "                    ─   │   ─                    \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                    ─   │   ─                    \n",
+      "                                                 \n",
+      "                        ★   │   ★                \n",
+      "                                                 \n",
+      "                        ★                        \n",
+      "                                                 \n",
+      "                        ─   │   ★                \n",
+      "                                                 \n",
+      "                        │,★   ─                    \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                            │   ★                \n",
+      "                                                 \n",
+      "                        │   ─,★                    \n",
+      "                                                 \n",
+      "                            ─                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                            │,★   │   ★            \n",
+      "                                                 \n",
+      "                        │   ─                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        │,★   ─                    \n",
+      "                                                 \n",
+      "                        ─   │   ★                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        │   ─   ★                \n",
+      "                                                 \n",
+      "                            │   ─                \n",
       "                                                 \n",
       "\n"
      ]
