Add a little section to the Backtrack notebook about Polyomino's order. Moreover, failed to add randomization in function `polyominoes`.

--- a/tutorials/backtrack.ipynb
+++ b/tutorials/backtrack.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
+    "<br>May 31, 2016: trying to add <i>randomization</i>, Polyomino's order\n",
     "<br>May 25, 2016: Polyominoes\n",
     "<br>May 23, 2016: n-Queens\n",
     "</div>\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
@@ -213,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -222,7 +223,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution computed in 3.2456 secs:\n",
+      "Solution computed in 3.2474 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -244,7 +245,7 @@
       "| | | | | | | | | | | | | |Q| | | | | | |\n",
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.00010014 secs:\n",
+      "Solution computed in 8.893e-05 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -266,7 +267,7 @@
       "| | | | | | | | | | | | | |Q| | | | | | |\n",
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.55593 secs:\n",
+      "Solution computed in 0.63178 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -288,7 +289,7 @@
       "| | | | | | | | |Q| | | | | | | | | | | |\n",
       "| | | | | | | | | | |Q| | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.34568 secs:\n",
+      "Solution computed in 0.2793 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -310,7 +311,7 @@
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "| | | | | | | |Q| | | | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.10461 secs:\n",
+      "Solution computed in 0.085886 secs:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -392,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 134,
    "metadata": {
     "collapsed": true
    },
@@ -407,7 +408,7 @@
     "    if not availables or availables == 'ones':\n",
     "        availables = [1]*len(shapes) \n",
     "    elif availables == 'inf': \n",
-    "        availables = [-1]*len(shapes)\n",
+    "        availables = [-1]*len(shapes) # trick: represent ∞ piece availability by decreasing negative numbers\n",
     "    \n",
     "    def place(S, positions):\n",
     "        for r, c in positions:\n",
@@ -469,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 135,
    "metadata": {
     "collapsed": true
    },
@@ -819,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -845,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 137,
    "metadata": {
     "collapsed": true
    },
@@ -864,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -873,7 +874,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-st solution computed in 0.0242 secs:\n",
+      "1-st solution computed in 0.0345 secs:\n",
       "┌─────────────────────┐\n",
       "│ β δ δ δ ε ε ι ι ι ι │\n",
       "│ β δ θ δ α ε ε λ λ ι │\n",
@@ -882,7 +883,7 @@
       "│ β θ γ μ μ η κ ζ ζ ζ │\n",
       "│ γ γ γ μ μ κ κ κ κ ζ │\n",
       "└─────────────────────┘\n",
-      "2-sn solution computed in 0.312 secs:\n",
+      "2-sn solution computed in 0.31 secs:\n",
       "┌─────────────────────┐\n",
       "│ β δ δ δ η η α ζ ζ ζ │\n",
       "│ β δ θ δ η α α α ζ κ │\n",
@@ -891,7 +892,7 @@
       "│ β θ γ ι λ ε ε μ μ κ │\n",
       "│ γ γ γ ι ι ι ι μ μ μ │\n",
       "└─────────────────────┘\n",
-      "3-rd solution computed in 0.00671 secs:\n",
+      "3-rd solution computed in 0.00676 secs:\n",
       "┌─────────────────────┐\n",
       "│ β δ δ δ η η ι ι ι ι │\n",
       "│ β δ θ δ η ε ε λ λ ι │\n",
@@ -900,7 +901,7 @@
       "│ β θ γ μ μ α κ ζ ζ ζ │\n",
       "│ γ γ γ μ μ κ κ κ κ ζ │\n",
       "└─────────────────────┘\n",
-      "4-th solution computed in 0.926 secs:\n",
+      "4-th solution computed in 0.799 secs:\n",
       "┌─────────────────────┐\n",
       "│ β ε ε ζ ζ ζ ι ι ι ι │\n",
       "│ β κ ε ε ζ λ θ θ θ ι │\n",
@@ -909,7 +910,7 @@
       "│ β κ γ δ α α α η μ μ │\n",
       "│ γ γ γ δ δ α η η μ μ │\n",
       "└─────────────────────┘\n",
-      "5-th solution computed in 0.228 secs:\n",
+      "5-th solution computed in 0.223 secs:\n",
       "┌─────────────────────┐\n",
       "│ β ε ε ζ ζ ζ ι ι ι ι │\n",
       "│ β κ ε ε ζ λ θ θ θ ι │\n",
@@ -918,7 +919,7 @@
       "│ β κ γ μ μ η α α α δ │\n",
       "│ γ γ γ μ μ η η α δ δ │\n",
       "└─────────────────────┘\n",
-      "6-th solution computed in 0.572 secs:\n",
+      "6-th solution computed in 0.552 secs:\n",
       "┌─────────────────────┐\n",
       "│ β ε ε μ μ μ ζ δ δ δ │\n",
       "│ β κ ε ε μ μ ζ δ θ δ │\n",
@@ -927,7 +928,7 @@
       "│ β κ γ ι α λ λ λ η θ │\n",
       "│ γ γ γ ι ι ι ι λ η η │\n",
       "└─────────────────────┘\n",
-      "7-th solution computed in 0.159 secs:\n",
+      "7-th solution computed in 0.154 secs:\n",
       "┌─────────────────────┐\n",
       "│ β θ θ θ ε ε η η μ μ │\n",
       "│ β ι ι θ θ ε ε η μ μ │\n",
@@ -936,7 +937,7 @@
       "│ β ι γ ζ λ κ α α α δ │\n",
       "│ γ γ γ κ κ κ κ α δ δ │\n",
       "└─────────────────────┘\n",
-      "8-th solution computed in 0.348 secs:\n",
+      "8-th solution computed in 0.333 secs:\n",
       "┌─────────────────────┐\n",
       "│ β ι ι ι ι η κ κ κ κ │\n",
       "│ β ι θ η η η λ λ κ ζ │\n",
@@ -945,7 +946,7 @@
       "│ β θ γ δ α δ ε ε μ μ │\n",
       "│ γ γ γ δ δ δ ε μ μ μ │\n",
       "└─────────────────────┘\n",
-      "9-th solution computed in 0.000744 secs:\n",
+      "9-th solution computed in 0.00067 secs:\n",
       "┌─────────────────────┐\n",
       "│ β ι ι ι ι η κ κ κ κ │\n",
       "│ β ι θ η η η λ λ κ ζ │\n",
@@ -954,7 +955,7 @@
       "│ β θ γ δ α δ μ μ ε ε │\n",
       "│ γ γ γ δ δ δ μ μ μ ε │\n",
       "└─────────────────────┘\n",
-      "10-th solution computed in 0.46 secs:\n",
+      "10-th solution computed in 0.418 secs:\n",
       "┌─────────────────────┐\n",
       "│ β ι ι ι ι ε ε ζ ζ ζ │\n",
       "│ β κ η η ι α ε ε ζ θ │\n",
@@ -1000,7 +1001,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With *forbidden* cells"
+    "### With *forbidden* cells and (not so) many pieces for each shape"
    ]
   },
   {
@@ -1012,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -1034,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -1043,7 +1044,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1-st solution computed in 0.00897 secs:\n",
+      "1-st solution computed in 0.0106 secs:\n",
       "┌─────────────────────┐\n",
       "│   β β ι ι ι ι μ μ μ │\n",
       "│   β β ι ι   ι μ μ   │\n",
@@ -1052,7 +1053,7 @@
       "│   β β ι γ γ γ γ ι   │\n",
       "│ β β β β β γ γ γ ι   │\n",
       "└─────────────────────┘\n",
-      "2-sn solution computed in 0.00799 secs:\n",
+      "2-sn solution computed in 0.0083 secs:\n",
       "┌─────────────────────┐\n",
       "│   β β ι ι ι ι γ γ γ │\n",
       "│   β β ι ι   ι γ θ   │\n",
@@ -1061,7 +1062,7 @@
       "│   β β ι γ γ γ θ ι   │\n",
       "│ β β β β β ι ι ι ι   │\n",
       "└─────────────────────┘\n",
-      "3-rd solution computed in 0.0012 secs:\n",
+      "3-rd solution computed in 0.00132 secs:\n",
       "┌─────────────────────┐\n",
       "│   β β ι ι ι ι ζ ζ ζ │\n",
       "│   β β ι ι   ι κ ζ   │\n",
@@ -1070,7 +1071,7 @@
       "│   β β ι γ γ γ κ ι   │\n",
       "│ β β β β β ι ι ι ι   │\n",
       "└─────────────────────┘\n",
-      "4-th solution computed in 0.00243 secs:\n",
+      "4-th solution computed in 0.00249 secs:\n",
       "┌─────────────────────┐\n",
       "│   β β ι ι ι ι μ μ μ │\n",
       "│   β β ι ι   ι μ μ   │\n",
@@ -1115,7 +1116,7 @@
       "│   β β ι θ θ γ μ μ   │\n",
       "│ β β β β β θ θ θ μ   │\n",
       "└─────────────────────┘\n",
-      "9-th solution computed in 0.00248 secs:\n",
+      "9-th solution computed in 0.00203 secs:\n",
       "┌─────────────────────┐\n",
       "│   β β ι ι ι ι μ μ μ │\n",
       "│   β β ι ι   ι μ μ   │\n",
@@ -1124,7 +1125,7 @@
       "│   β β ι θ θ δ δ κ   │\n",
       "│ β β β β β θ θ θ κ   │\n",
       "└─────────────────────┘\n",
-      "10-th solution computed in 0.00199 secs:\n",
+      "10-th solution computed in 0.00109 secs:\n",
       "┌─────────────────────┐\n",
       "│   β β ι ι ι ι μ μ μ │\n",
       "│   β β ι ι   ι μ μ   │\n",
@@ -1145,6 +1146,96 @@
     "        o = \"st\" if not i else \"sn\"\n",
     "        print(\"{}-{} solution computed in {:.3} {}:\\n{}\".format(i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"), \n",
     "                                                                *t, pretty(s, dim, lower_greek_symbols())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Moreover, I've found a board configuration, where cells located at $(1,1)$ and $(4,8)$ are forbidden, such that it takes very long to be tiled, eventually I stopped the search each time, even if *infinitely many* pieces for each shape are available. I believe that even if we use *randomization* at shape/orientation selection time wouldn't help to shrink the complexity. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polyomino's order\n",
+    "\n",
+    "Again, in the exercise **7 in Chapter 3**, Ruskey asks to find the *order* of some polyomino. Here's the definition:\n",
+    "\n",
+    ">Define the order of a polyomino $P$ to be the smallest number of copies of $P$ that\n",
+    "will fit perfectly into a rectangle, where rotations and reflections of $P$ are allowed.\n",
+    "\n",
+    "We reproduce the tiling using the `Y` polyomino and we check that its order is actually 10; in order to show the tiling we given 10 copies of the `Y` shape, each one with one piece available:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dim = (5,10)\n",
+    "polys_sols = polyominoes(dim, [Y_shape ]*10, availables='ones', forbidden=[])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there are many way to tile the board, here there are the first three:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1-st solution computed in 0.0761 secs, using 10 Y polyominoes:\n",
+      "┌─────────────────────┐\n",
+      "│ α γ γ γ γ ζ ι ι ι ι │\n",
+      "│ α α δ γ ζ ζ ζ ζ ι κ │\n",
+      "│ α δ δ δ δ η η η η κ │\n",
+      "│ α β ε ε ε ε θ η κ κ │\n",
+      "│ β β β β ε θ θ θ θ κ │\n",
+      "└─────────────────────┘\n",
+      "2-sn solution computed in 0.000127 secs, using 10 Y polyominoes:\n",
+      "┌─────────────────────┐\n",
+      "│ α γ γ γ γ ζ κ κ κ κ │\n",
+      "│ α α δ γ ζ ζ ζ ζ κ ι │\n",
+      "│ α δ δ δ δ η η η η ι │\n",
+      "│ α β ε ε ε ε θ η ι ι │\n",
+      "│ β β β β ε θ θ θ θ ι │\n",
+      "└─────────────────────┘\n",
+      "3-rd solution computed in 0.000229 secs, using 10 Y polyominoes:\n",
+      "┌─────────────────────┐\n",
+      "│ α γ γ γ γ ζ θ θ θ θ │\n",
+      "│ α α δ γ ζ ζ ζ ζ θ κ │\n",
+      "│ α δ δ δ δ η η η η κ │\n",
+      "│ α β ε ε ε ε ι η κ κ │\n",
+      "│ β β β β ε ι ι ι ι κ │\n",
+      "└─────────────────────┘\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    with timing(lambda: next(polys_sols)) as (s, start, end):\n",
+    "        t = (end - start, 'secs')\n",
+    "        t = (t[0] / 60, 'mins') if t[0] > 59 else t\n",
+    "        t = (t[0] / 60, 'hours') if t[0] > 59 else t\n",
+    "        o = \"st\" if not i else \"sn\"\n",
+    "        print(\"{}-{} solution computed in {:.3} {}, using {} Y polyominoes:\\n{}\".format(\n",
+    "                i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"),\n",
+    "                *t, len(s), pretty(s, dim, lower_greek_symbols())))"
    ]
   },
   {
